# GraphicsConverter

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  build.ps1  compile.sh
.github/workflows/: cmake-multi-platform.yml
src/: ColorReducer.cpp  ColorReducer.h  Converter.cpp  Converter.h  Dithering.cpp  Dithering.h  GuiLogSink.cpp  GuiLogSink.h  ImageConverter.h  KoalaConverter.cpp  KoalaConverter.h  Logger.cpp  Logger.h  Main.cpp  Main.h  STDImage.cpp
tests/: ColorReducerTests.cpp  ConverterTests.cpp
